<resources>
    <string name="app_name">Activity Tracker</string>
    <string name="enter_activity_name">Enter Activity Name</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="login_key">login_key</string>
    <string name="deny_google_access">Deny Google access</string>
    <string name="unnamed">UNNAMED</string>
    <string name="deny_database_key">false</string>
    <string name="error">ERROR</string>
    <string name="enter_username">Enter Username</string>
    <string name="seconds">seconds</string>
    <string name="title">Title</string>
    <string name="secondary_text">Secondary Text</string>
    <string name="other_text">Other text</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="delete_selected">Delete selected</string>
    <string name="delete_button">Delete Button</string>
    <string name="delete">Delete</string>
    <string name="seconds_text">%1$s seconds</string>
    <string name="counter_text">%1$d &#160;&#160;&#160; %2$s</string>
    <string name="undo_all">Undo All</string>
    <string name="commit_changes">Commit Changes</string>
    <string name="add_activity">Add Activity</string>
    <string name="add_session_title">Would you like to add this session to %1$s ?</string>
</resources>
