<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="#E6E6E6"
    card_view:cardElevation="8dp"
    card_view:cardCornerRadius="8dp"
    android:layout_margin="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="16sp"
            card_view:layout_constraintBottom_toTopOf="@id/secondary_text"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/secondary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondary_text"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toTopOf="@id/other_text"
            card_view:layout_constraintStart_toStartOf="@id/activity_title"
            card_view:layout_constraintTop_toBottomOf="@id/activity_title" />

        <TextView
            android:id="@+id/other_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/other_text"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="@id/activity_title"
            card_view:layout_constraintTop_toBottomOf="@id/secondary_text" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/start"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/ic_delete_black_24dp"
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/delete"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/delete_button"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/btn_start"
            card_view:layout_constraintHorizontal_bias="0.75"
            card_view:layout_constraintStart_toEndOf="@+id/secondary_text"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.507" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
